--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -1,5 +1,10 @@
+name: OWASP ZAP Integration with Github Actions
+
 on: [push]
 
+permissions:
+  issues: write  # This allows the workflow to create issues
+  
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
@@ -14,6 +19,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org/'
+          target: 'http://testphp.vulnweb.com/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
