--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://testphp.vulnweb.com/'
+          target: 'https://www.nbc.gov.kh/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
